--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,8 @@
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/header/header.css);
+
 body {
-  background-color: aquamarine;
+  background-color: black;
+  color: aliceblue;
 }
