--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,8 +1,10 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/hero/hero.css);
+@import url(../blocks/author/author.css);
 
 body {
-  background-color: black;
+  background-color: white;
   color: aliceblue;
 }
