--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,6 +3,12 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/hero/hero.css);
 @import url(../blocks/author/author.css);
+@import url(../blocks/section/section.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/utils/text-center/text-center.css);
+@import url(../blocks/footer/footer.css);
 
 body {
   background-color: white;
