add my profile page

--- a/src/blocks/header/__link/_active/header__link_active.css
+++ b/src/blocks/header/__link/_active/header__link_active.css
@@ -2,3 +2,8 @@
   border-bottom: 3px solid white;
   color: white !important;
 }
+
+.header__link_dark.header__link_active {
+  border-bottom: 3px solid #1a1b22;
+  color: #1a1b22 !important;
+}
