--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -1,10 +1,12 @@
+@import url(./_dark/header__button_dark.css);
+
 .header__button {
   height: 48px;
   border: 1px solid white;
   color: white;
   border-radius: 100px;
-  display: inline-block;
-  line-height: 48px;
+  display: flex;
+  align-items: center;
   padding: 0 12px;
   text-decoration: none;
 }
