--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,10 @@
-@import url(../header/__container/header__container.css);
-@import url(../header/__logo/header__logo.css);
-@import url(../header/__nav/header__nav.css);
-@import url(../header/__link/header__link.css);
-@import url(../header/__button/header__button.css);
+@import url(./__container/header__container.css);
+@import url(./__logo/header__logo.css);
+@import url(./__nav/header__nav.css);
+@import url(./__link/header__link.css);
+@import url(./__button/header__button.css);
+@import url(./_dark/header_dark.css);
+@import url(./__button-icon/header__button-icon.css);
 
 .header {
   height: 80px;
