finish my-profile page

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,5 +8,5 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/utils/text-center/text-center.css);
+@import url(../blocks/utils/padding-bottom-80/padding-bottom-80.css);
 @import url(../blocks/footer/footer.css);
-
