--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -2,5 +2,6 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 64px;
+  padding-bottom: 64px;
+  padding-top: 64px;
 }
