--- a/src/blocks/section/__title/section__title.css
+++ b/src/blocks/section/__title/section__title.css
@@ -6,5 +6,7 @@
   font-size: 40px;
   line-height: 46px;
   color: #1A1B22;
-  margin-bottom: 64px;
+  padding-top: 80px;
+  margin-bottom: 30px;
+  max-width: 513px;
 }
