--- a/src/blocks/section/section.css
+++ b/src/blocks/section/section.css
@@ -1,8 +1,9 @@
 @import url(./__container/section__container.css);
 @import url(./__title/section__title.css);
+@import url(./__aside/section__aside.css);
+@import url(./__paragraph/section__paragraph.css);
+@import url(./_white/section_white.css);
 
 .section {
   background: #F5F6F7;
-  padding-top: 80px;
-  padding-bottom: 80px;
 }
