--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -1,3 +1,5 @@
+@import url(./_is-fullwidth/button_is-fullwidth.css);
+
 .button {
   background: #FFFFFF;
   border-radius: 80px;
@@ -5,15 +7,26 @@
   text-decoration: none;
   color: #1A1B22;
   display: inline-block;
-  line-height: 64px;
   padding-left: 84px;
   padding-right: 84px;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
+  border: 1px solid #1A1B22;
+}
+
+a.button {
+  line-height: 64px;
 }
 
 .button:hover {
   opacity: 0.9;
+}
+
+.button:disabled,
+.button[disabled] {
+  background: #E6E8EB;
+  border: 1px solid #E6E8EB;
+  color: #B6BCBF;
 }
