--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,4 +9,8 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/utils/text-center/text-center.css);
 @import url(../blocks/utils/padding-bottom-80/padding-bottom-80.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/input-container/input-container.css);
+@import url(../blocks/error-message/error-message.css);
+@import url(../blocks/link/link.css);
 @import url(../blocks/footer/footer.css);
