--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -7,4 +7,11 @@
   font-size: 20px;
   line-height: 24px;
   color: white;
+  z-index: 99;
+}
+
+@media(max-width: 400px) {
+  .header__logo {
+    font-size: 16px;
+  }
 }
