--- a/src/blocks/hero/__container/hero__container.css
+++ b/src/blocks/hero/__container/hero__container.css
@@ -1,5 +1,11 @@
 .hero__container {
-  width: 608px;
+  max-width: 608px;
   margin: 0 auto;
   height: 100%;
+}
+
+@media(max-width: 768px) {
+  .hero__container {
+    max-width: 448px;
+  }
 }
