--- a/src/blocks/hero/__title/hero__title.css
+++ b/src/blocks/hero/__title/hero__title.css
@@ -10,3 +10,12 @@
   margin-bottom: 32px;
 
 }
+
+@media(max-width: 768px) {
+  .hero__title {
+    font-size: 36px;
+    line-height: 40px;
+    max-width: 385px;
+    margin-bottom: 16px;
+  }
+}
