--- a/src/blocks/author/__container/author__container.css
+++ b/src/blocks/author/__container/author__container.css
@@ -1,5 +1,21 @@
 .author__container {
   margin: 0 auto;
   display: flex;
-  width: 1120px;
+  max-width: 1120px;
+}
+
+@media(max-width: 1200px) {
+  .author__container {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+
+@media(max-width: 500px) {
+  .author__container {
+    flex-direction: column;
+    padding-right: 16px;
+    padding-left: 16px;
+    align-items: center;
+  }
 }
