--- a/src/blocks/author/__title/author__title.css
+++ b/src/blocks/author/__title/author__title.css
@@ -6,4 +6,12 @@
   line-height: 46px;
   color: #1A1B22;
   margin-bottom: 24px;
+  margin-top: 0;
+}
+
+@media(max-width: 768px) {
+  .author__title{
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
