--- a/src/blocks/author/author.css
+++ b/src/blocks/author/author.css
@@ -8,3 +8,17 @@
   padding-top: 80px;
   padding-bottom: 80px;
 }
+
+@media(max-width: 1100px) {
+  .author{
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media(max-width: 768px) {
+  .author{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
