--- a/src/blocks/card/__container/card__container.css
+++ b/src/blocks/card/__container/card__container.css
@@ -3,3 +3,11 @@
   padding-right: 24px;
   padding-bottom: 24px;
 }
+
+@media(max-width: 1100px) {
+  .card__container {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 16px;
+  }
+}
