--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -4,3 +4,30 @@
   border-radius: 16px 16px 0 0;
   margin-bottom: 20px;
 }
+
+@media(max-width: 1100px) {
+  .card__image {
+    height: 240px;
+  }
+}
+
+
+@media(max-width: 900px) {
+  .card__image {
+    height: 200px;
+  }
+}
+
+
+@media(max-width: 768px) {
+  .card__image {
+    height: 150px;
+  }
+}
+
+@media(max-width: 700px) {
+  .card__image {
+    height: 198px;
+  }
+}
+
