--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -7,4 +7,25 @@
   color: #1A1B22;
   margin-top: 0;
   margin-bottom: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+@media(max-width: 1100px) {
+  .card__title {
+    font-size: 22px;
+    line-height: 24px;
+    height: 72px;
+    margin-bottom: 10px;
+  }
+}
+
+@media(max-width: 500px) {
+  .card__title {
+    height: 51px;
+    -webkit-line-clamp: 2;
+  }
 }
