--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -11,7 +11,7 @@
 @import url(./__source/card__source.css);
 
 .card {
-  width: 400px;
+  max-width: 400px;
   background: #FFFFFF;
   border-radius: 16px;
   position: relative;
@@ -23,4 +23,45 @@
 
 .card:hover {
   box-shadow: 0 25px 20px -20px rgba(8, 29, 45, 0.1);
+}
+
+
+@media(max-width: 1312px) {
+  .card {
+    width: calc(33.333333% - 16px);
+  }
+}
+
+@media(max-width: 1100px) {
+  .card {
+    height: 510px;
+  }
+}
+
+@media(max-width: 900px) {
+  .card {
+    height: 480px;
+    width: calc(33.333333% - 8px);
+  }
+}
+
+@media(max-width: 768px) {
+  .card {
+    height: 420px;
+  }
+}
+
+
+@media(max-width: 700px) {
+  .card {
+    width: calc(50% - 8px);
+    height: 480px;
+  }
+}
+
+@media(max-width: 500px) {
+  .card {
+    width: 100%;
+    height: 446px;
+  }
 }
