--- a/src/blocks/footer/__link/footer__link.css
+++ b/src/blocks/footer/__link/footer__link.css
@@ -3,3 +3,20 @@
   color: #1A1B22;
   margin-left: 32px;
 }
+
+@media(max-width: 768px) {
+  .footer__link {
+    margin-left: 20px;
+  }
+}
+
+.footer__link:first-child {
+  margin-left: 0;
+}
+
+@media(max-width: 460px) {
+  .footer__link {
+    margin-left: 0;
+    line-height: 46px;
+  }
+}
