--- a/src/blocks/footer/__socials/footer__socials.css
+++ b/src/blocks/footer/__socials/footer__socials.css
@@ -1,3 +1,10 @@
 .footer__socials {
   margin-left: 17px;
 }
+
+@media(max-width: 460px) {
+  .footer__socials {
+    min-width: 110px;
+    margin-left: 0;
+  }
+}
