--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -9,4 +9,11 @@
   align-items: center;
   padding: 0 12px;
   text-decoration: none;
+  justify-content: center;
+}
+
+@media(max-width: 700px) {
+  .header__button {
+    margin-top: 22px;
+  }
 }
