--- a/src/blocks/header/__link/_active/header__link_active.css
+++ b/src/blocks/header/__link/_active/header__link_active.css
@@ -7,3 +7,9 @@
   border-bottom: 3px solid #1a1b22;
   color: #1a1b22 !important;
 }
+
+@media(max-width: 700px) {
+  .header__link_active {
+    border-bottom: none;
+  }
+}
