--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -14,3 +14,10 @@
 .header__link:hover {
   color: white;
 }
+
+@media(max-width: 700px) {
+  .header__link {
+    line-height: 56px;
+    height: 56px;
+  }
+}
