--- a/src/blocks/hero/__search/hero__search.css
+++ b/src/blocks/hero/__search/hero__search.css
@@ -1,5 +1,4 @@
 .hero__search {
-  width: 608px;
   height: 64px;
   display: flex;
   border-radius: 100px;
@@ -8,4 +7,16 @@
   align-items: center;
   padding-left: 24px;
   box-sizing: border-box;
+}
+
+@media(max-width: 360px) {
+  .hero__search {
+    height: 128px;
+    flex-direction: column;
+    position: absolute;
+    bottom: 32px;
+    width: calc(100% - 32px);
+    background-color: transparent;
+    padding-left: 0;
+  }
 }
