--- a/src/blocks/hero/__submit/hero__submit.css
+++ b/src/blocks/hero/__submit/hero__submit.css
@@ -22,3 +22,10 @@
   background-color: #2A65CC;
   box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
 }
+
+@media(max-width: 360px) {
+  .hero__submit {
+    height: 56px;
+    width: 100%;
+  }
+}
