--- a/src/blocks/notification/__description/notification__description.css
+++ b/src/blocks/notification/__description/notification__description.css
@@ -1,15 +1,9 @@
-.card__date {
+.notification__description {
   font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
+  text-align: center;
   color: #B6BCBF;
-  margin-bottom: 12px;
-}
-
-@media(max-width: 768px) {
-  .card__date {
-    margin-top: 16px;
-  }
 }
