--- a/src/blocks/section/__aside/section__aside.css
+++ b/src/blocks/section/__aside/section__aside.css
@@ -5,5 +5,12 @@
   font-size: 18px;
   line-height: 24px;
   color: rgba(26, 27, 34, 0.5);
-  margin-bottom: 28px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+@media(max-width: 768px) {
+  .section__aside {
+    padding-top: 24px;
+  }
 }
