--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -19,3 +19,9 @@
   justify-content: center;
   display: none;
 }
+
+@media screen and (max-width: 400px) {
+  .popup {
+    align-items: flex-start;
+  }
+}
