add search functionality

--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -5,15 +5,17 @@
   font-size: 16px;
   line-height: 22px;
   color: #1A1B22;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  height: 130px;
 }
 
 @media(max-width: 1312px) {
   .card__description {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
     -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
     height: 88px;
     margin-top: 0;
   }
