--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,3 +16,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/preloader/preloader.css);
 @import url(../blocks/notification/notification.css);
+@import url(../blocks/error/error.css);
