--- a/src/blocks/popup/__error/popup__error.css
+++ b/src/blocks/popup/__error/popup__error.css
@@ -1,3 +1,5 @@
+@import url('./_is-visible/popup__error_is-visible.css');
+
 .popup__error {
   font-family: "Roboto";
   font-style: normal;
@@ -8,4 +10,5 @@
   color: #FF0000;
   padding-bottom: 12px;
   margin-top: -18px;
+  display: none;
 }
